Fix subhead colors for dark mode
In dark mode the subhead blends into the article because it's color is
not specified. Grabbed the correct colors from Figma.

--- a/data/content-stylesheet.css
+++ b/data/content-stylesheet.css
@@ -37,7 +37,7 @@ p {
   font-size: 1.5em;
   line-height: 1em;
   font-weight: normal;
-  color: rgba(27, 27, 27, 0.65);
+  color: #495057;
 }
 
 .metadata {
@@ -465,5 +465,9 @@ iframe {
 
   a[href] {
     color: #737ADE;
+  }
+
+  .subhead, .subheading {
+    color: #C2C4CF;
   }
 }
